--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home</h1>
+    <main>
+        <section>
+            <h1>Home</h1>
+
+        </section>
+    </main>
 </body>
 </html>
