--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Contact</h1>
+
+    <footer>
+        <p>Esta es mi descripción de footer</p>
+    </footer>
 </body>
 </html>
