Cambios agregados en home y about

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <h1>Home</h1>
 
         </section>
+
+        <section>
+            <p>test</p>
+        </section>
     </main>
 </body>
 </html>
