--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>About</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque labore magnam possimus fugiat? Explicabo voluptatem fuga molestiae saepe odio similique fugit fugiat dignissimos error maiores, iure nemo, qui, quam corporis.</p>
 </body>
 </html>
