Nueva seccion en home

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <section>
             <p>test</p>
         </section>
+
+        <section>
+            <span>test</span>
+        </section>
     </main>
 </body>
 </html>
