--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <main>
         <section>
             <h1>Home</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error mollitia officia dolor quis recusandae sequi veniam expedita, earum animi voluptatem saepe minus? Commodi accusantium voluptatibus illo officiis ducimus dolore esse!</p>
 
         </section>
 
