--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <section>
-            <h1>Home</h1>
+            <h1>Este es un titulo pero desde el repo local</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error mollitia officia dolor quis recusandae sequi veniam expedita, earum animi voluptatem saepe minus? Commodi accusantium voluptatibus illo officiis ducimus dolore esse!</p>
 
         </section>
